samples/_failures_safe/1761411302_a7df72_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e445aadb.c: In function ‘main’:
./samples/SAFE/__tmp_e445aadb.c:149:16: error: missing terminating " character
  149 |         printf("4. Transpose Matrix B
      |                ^~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_e445aadb.c:149:9: error: expected expression at end of input
  149 |         printf("4. Transpose Matrix B
      |         ^~~~~~
./samples/SAFE/__tmp_e445aadb.c:149:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e445aadb.c:149:9: error: expected declaration or statement at end of input
